--- a/login.html
+++ b/login.html
@@ -10,10 +10,12 @@
     <h1>Login Page</h1>
     <form action="">
         <label for="Name">Name:</label>
-        <input type="text" name="Name" placeholder="Name">
+        <input type="text" name="Name" placeholder="Name" required>
         <label for="password">Password:</label>
-        <input type="password" name="Password" placeholder="Password">
-        <a href="./register.html"></a>
+        <input type="passwrd" name="Password" placeholder="Password" required>
+        <button>submit</button>
+
     </form>
+    <a href="./register.html"></a>
 </body>
 </html>
