--- a/register.html
+++ b/register.html
@@ -10,9 +10,10 @@
     <h1>Register</h1>
     <form action="">
         <label for="Name">Name:</label>
-        <input type="text" name="Name" placeholder="Name">
+        <input type="text" name="Name" placeholder="Name" required>
         <label for="password">Password:</label>
-        <input type="password" name="Password" placeholder="Password">
+        <input type="password" name="Password" placeholder="Password" required>
+        <button>submit</button>
     </form>
 </body>
 </html>
