--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form action="">
+    <form action="/register" method="post">
         <label for="Name">Name:</label>
         <input type="text" name="Name" placeholder="Name" required>
         <label for="password">Password:</label>
