--- a/login.html
+++ b/login.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <h1>Login Page</h1>
-    <form action="">
+    <form action="/login" method="post">
         <label for="Name">Name:</label>
         <input type="text" name="Name" placeholder="Name" required>
         <label for="password">Password:</label>
-        <input type="passwrd" name="Password" placeholder="Password" required>
+        <input type="password" name="Password" placeholder="Password" required>
         <button>submit</button>
-
     </form>
-    <a href="./register.html"></a>
+    <a href="./register">register</a>
 </body>
 </html>
