--- a/register.html
+++ b/register.html
@@ -15,5 +15,6 @@
         <input type="password" name="Password" placeholder="Password" required>
         <button>submit</button>
     </form>
+    <a href="./login">login</a>
 </body>
 </html>
